--- a/Project/Filtering&Translation.ipynb
+++ b/Project/Filtering&Translation.ipynb
@@ -5,7 +5,7 @@
    "id": "fabd40bd-630d-44e6-abd3-8483b34c93ab",
    "metadata": {},
    "source": [
-    "# Identification of Xylanase Genes from the Rumen Metagenome\n",
+    "# Filtering and Translation\n",
     "\n",
     "\n",
     "__Content creators:__  Mahdi Anvari, Sadegh Rizi, Amirhossein Norouzi\n",
@@ -202,6 +202,14 @@
    ],
    "source": [
     "print(tblastn_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e4e1313-63f8-4696-8ee3-379f7cb080f3",
+   "metadata": {},
+   "source": [
+    "We need to merge the tblastn output file with the contigs file. We require the contig lengths for filtering and the contig sequences for the translation step."
    ]
   },
   {
@@ -745,6 +753,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a631246d-2125-4542-b018-1abab1cca0c2",
+   "metadata": {},
+   "source": [
+    "Now, it’s time to filter out sequences based on criteria such as identity, e-value, contig length, and alignment length."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "c4e72a6c-21e2-46da-aab8-fbffa1c4eda2",
@@ -950,33 +966,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "43f3058c-ac79-442f-b999-68ae7e401f92",
+   "cell_type": "markdown",
+   "id": "6a17deff-c0e4-4ebb-a604-a02357691ff5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\M\\AppData\\Local\\Temp\\ipykernel_10888\\1808596071.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df['frame'] = ((filtered_df['s. start'] - 1) % 3) + 1\n",
-      "C:\\Users\\M\\AppData\\Local\\Temp\\ipykernel_10888\\1808596071.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df['frame'] = ((filtered_df['contig_len'] - filtered_df['s. start']) % 3) * (-1) - 1\n"
-     ]
-    }
-   ],
    "source": [
-    "filtered_df['frame'] = ((filtered_df['s. start'] - 1) % 3) + 1\n",
-    "filtered_df['frame'] = ((filtered_df['contig_len'] - filtered_df['s. start']) % 3) * (-1) - 1"
+    "Before translation, we must determine the reading frame of the contig. For sense contigs, we need to know their alignment start point, while for antisense contigs, we must also consider the contig length in addition to the alignment start point."
    ]
   },
   {
@@ -1672,6 +1666,14 @@
    "outputs": [],
    "source": [
     "dataframe_to_fasta(filtered_df, 'filtered_output.fasta')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "754f0849-2ac2-45b9-aa87-ca8afc9d2189",
+   "metadata": {},
+   "source": [
+    "Before proceeding with further downstream analysis, let’s first examine the distribution of our filtered protein sequences."
    ]
   },
   {
